--- a/pygmalion-z-dark.css
+++ b/pygmalion-z-dark.css
@@ -1468,7 +1468,7 @@
 	.is_thread .board .opContainer .watch-thread-link,
 	.is_index .board .opContainer .watch-thread-link,
 	.dialog .op .postInfo .watch-thread-link {
-		background-image: url("data:image/svg+xml,<svg viewBox=!string!preserveAspectRatio=!string!xmlns=!string!><path fill=!string!d=!string!/></svg>") !important;
+		background-image: url("data:image/svg+xml,<svg viewBox='0 0 30 30' preserveAspectRatio='true' xmlns='http://www.w3.org/2000/svg'><path fill='rgb(149,165,166)' d='M14.615,4.928c0.487-0.986,1.284-0.986,1.771,0l2.249,4.554c0.486,0.986,1.775,1.923,2.864,2.081l5.024,0.73c1.089,0.158,1.335,0.916,0.547,1.684l-3.636,3.544c-0.788,0.769-1.28,2.283-1.095,3.368l0.859,5.004c0.186,1.085-0.459,1.553-1.433,1.041l-4.495-2.363c-0.974-0.512-2.567-0.512-3.541,0l-4.495,2.363c-0.974,0.512-1.618,0.044-1.432-1.041l0.858-5.004c0.186-1.085-0.307-2.6-1.094-3.368L3.93,13.977c-0.788-0.768-0.542-1.525,0.547-1.684l5.026-0.73c1.088-0.158,2.377-1.095,2.864-2.081L14.615,4.928z'/></svg>") !important;
 		padding-top: 21px !important;
 		width: 25px !important;
 		opacity: 1 !important;
@@ -1477,7 +1477,7 @@
 	.is_thread .board .opContainer .watched,
 	.is_index .board .opContainer .watched,
 	.dialog .op .postInfo .watched {
-		background-image: url("data:image/svg+xml,<svg viewBox=!string!preserveAspectRatio=!string!xmlns=!string!><path fill=!string!d=!string!/></svg>") !important;
+		background-image: url("data:image/svg+xml,<svg viewBox='0 0 30 30' preserveAspectRatio='true' xmlns='http://www.w3.org/2000/svg'><path fill='rgb(242,155,52)' d='M14.615,4.928c0.487-0.986,1.284-0.986,1.771,0l2.249,4.554c0.486,0.986,1.775,1.923,2.864,2.081l5.024,0.73c1.089,0.158,1.335,0.916,0.547,1.684l-3.636,3.544c-0.788,0.769-1.28,2.283-1.095,3.368l0.859,5.004c0.186,1.085-0.459,1.553-1.433,1.041l-4.495-2.363c-0.974-0.512-2.567-0.512-3.541,0l-4.495,2.363c-0.974,0.512-1.618,0.044-1.432-1.041l0.858-5.004c0.186-1.085-0.307-2.6-1.094-3.368L3.93,13.977c-0.788-0.768-0.542-1.525,0.547-1.684l5.026-0.73c1.088-0.158,2.377-1.095,2.864-2.081L14.615,4.928z'/></svg>") !important;
 	}
 
 	:root.recolor-even .thread > .replyContainer:nth-of-type(2n):not(.hidden) .post,:root.recolor-even .thread .post {
@@ -1616,7 +1616,9 @@
 		color: var(--subject-color) !important
 	}
 
-	.nameBlock:not(.capcodeMod) > .name,:root.highlight-opQuotes .qmark-op,.qmark-op {
+	.nameBlock:not(.capcodeMod) > .name,
+	:root.highlight-opQuotes .qmark-op,
+	.qmark-op {
 		color: var(--name-color) !important;
 		font-size: 14pt !important;
 	}
@@ -1631,6 +1633,7 @@
 		display: none;
 	}
 
+	.qmark-you,
 	.qmark-ct {
 		font-size: 14pt !important;
 	}
@@ -1925,8 +1928,9 @@
 	.is_arclist .post .postMessage,
 	.is_arclist .post .postMessage a:not(.quotelink),
 	:root.op-background .postContainer.opContainer .postMessage,
-	:root.op-background .postContainer.opContainer .postMessage a
-	.is_thread s,.is_index s {
+	:root.op-background .postContainer.opContainer .postMessage a,
+	.is_thread s,
+	.is_index s {
 		font-size: 14pt !important;
 		font-stretch: condensed !important;
 	}
