Update and rename pygmalion-z.user.css to 4chan.user.css

--- a/4chan.user.css
+++ b/4chan.user.css
@@ -1,8 +1,8 @@
 /* ==UserStyle==
-@name           Pygmalion-Z
-@namespace      https://github.com/Catgrills/Pygmalion-Z
+@name           Pygmalion
+@namespace      https://github.com/Catgrills/Pygmalion
 @version        1.0.6
-@description    An userstyle for 4chan called Pygmalion-Z.
+@description    An userstyle for 4chan called Pygmalion.
 @author         Catgrills/Katgrills
 @preprocessor uso
 @var select theme 'Theme' {
