--- a/4chan.user.css
+++ b/4chan.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           Pygmalion
 @namespace      https://github.com/Catgrills/Pygmalion
-@version        1.0.7
+@version        1.0.8
 @description    An user style for 4chan called Pygmalion.
 @author         Catgrills/Katgrills
 @preprocessor uso
@@ -74,7 +74,6 @@
 	`
 }
 ==/UserStyle== */
-
 @-moz-document domain("boards.4chan.org"),
 domain("boards.4channel.org") {
 
@@ -179,22 +178,22 @@ domain("boards.4channel.org") {
 		visibility: visible !important;
 	}
 
-	:root.rounded-corners .reply,
-	:root.rounded-corners.op-background .postContainer.opContainer,
-	:root.rounded-corners .dialog:not(#header-bar),
-	:root.rounded-corners .inline,
-	:root.rounded-corners #thread-stats:root.rounded-corners #updater,
-	:root.rounded-corners #menu,
-	:root.rounded-corners .thumb,
-	:root.rounded-corners .fileThumb img:not(.full-image),
-	:root.rounded-corners .catalog-thumb,
-	:root.rounded-corners .dd-menu ul,
-	:root.rounded-corners.werkTyme .catalog-thread:not(:hover),
-	:root.rounded-corners.werkTyme:not(.catalog-hover-expand) .catalog-thread,
-	:root.rounded-corners.catalog-hover-expand .catalog-container:hover > .post,
-	:root.rounded-corners.catalog-hover-expand .catalog-container:hover .catalog-reply {
-		border-radius: 1px !important;
-	}
+    :root.rounded-corners .reply,
+    :root.rounded-corners.op-background .postContainer.opContainer,
+    :root.rounded-corners .dialog:not(#header-bar),
+    :root.rounded-corners .inline,
+    :root.rounded-corners #thread-stats:root.rounded-corners #updater,
+    :root.rounded-corners #menu,
+    :root.rounded-corners .thumb,
+    :root.rounded-corners .fileThumb img:not(.full-image),
+    :root.rounded-corners .catalog-thumb,
+    :root.rounded-corners .dd-menu ul,
+    :root.rounded-corners.werkTyme .catalog-thread:not(:hover),
+    :root.rounded-corners.werkTyme:not(.catalog-hover-expand) .catalog-thread,
+    :root.rounded-corners.catalog-hover-expand .catalog-container:hover > .post,
+    :root.rounded-corners.catalog-hover-expand .catalog-container:hover .catalog-reply {
+        border-radius: 1px !important;
+    }
 
 	.archivedIcon.retina,
 	#bannerCnt,
@@ -490,6 +489,7 @@ domain("boards.4channel.org") {
 		box-shadow: none !important;
 		color: #1BA39C !important;
 		padding: 20px !important;
+		min-width: 180px !important;
 	}
 
 	#thread-watcher > .move {
@@ -576,11 +576,12 @@ domain("boards.4channel.org") {
 	#oneechan-options {
 		background: var(--post-bg) !important;
 		border: 1px solid var(--border) !important;
+		max-height: 90%;
 	}
 
 	#fourchanx-settings *,
 	#oneechan-options * {
-		color: var(--post-color);
+		color: var(--post-color) !important;
 		font-size: 14pt;
 		font-stretch: condensed !important;
 	}
@@ -593,8 +594,8 @@ domain("boards.4channel.org") {
 	#fourchanx-settings nav {
 		background: var(--header-bg) !important;
 		border-bottom: 1px solid var(--border) !important;
-		padding: 14px 20px 28px 20px !important;
-		margin: -3px !important;
+		padding: 14px 20px 20px 20px !important;
+		margin: -5px -5px 0px -5px !important;
 	}
 
 	#fourchanx-settings .sections-list,
@@ -611,8 +612,7 @@ domain("boards.4channel.org") {
 		border-color: #242424 !important;
 	}
 
-	#fourchanx-settings .sections-list a:not(.tab-selected),
-	#fourchanx-settings .credits a {
+	#fourchanx-settings .sections-list a:not(.tab-selected),#fourchanx-settings .credits a {
 		color: var(--post-color) !important;
 		font-size: 14pt !important;
 	}
@@ -627,11 +627,6 @@ domain("boards.4channel.org") {
 	#fourchanx-settings fieldset {
 		border-radius: 1px !important;
 		border-color: var(--border) !important;
-	}
-
-	#fourchanx-settings .section-container {
-		top: 4.5em;
-		z-index: -1 !important;
 	}
 
 	#fourchanx-settings legend,
@@ -1512,20 +1507,20 @@ domain("boards.4channel.org") {
 		margin-left: -2px !important;
 	}
 
-	.is_thread .board .opContainer .watch-thread-link,
-	.is_index .board .opContainer .watch-thread-link,
-	.dialog .op .postInfo .watch-thread-link {
-		background-image: url("data:image/svg+xml,<svg viewBox='0 0 30 30' preserveAspectRatio='true' xmlns='http://www.w3.org/2000/svg'><path fill='rgb(149,165,166)' d='M14.615,4.928c0.487-0.986,1.284-0.986,1.771,0l2.249,4.554c0.486,0.986,1.775,1.923,2.864,2.081l5.024,0.73c1.089,0.158,1.335,0.916,0.547,1.684l-3.636,3.544c-0.788,0.769-1.28,2.283-1.095,3.368l0.859,5.004c0.186,1.085-0.459,1.553-1.433,1.041l-4.495-2.363c-0.974-0.512-2.567-0.512-3.541,0l-4.495,2.363c-0.974,0.512-1.618,0.044-1.432-1.041l0.858-5.004c0.186-1.085-0.307-2.6-1.094-3.368L3.93,13.977c-0.788-0.768-0.542-1.525,0.547-1.684l5.026-0.73c1.088-0.158,2.377-1.095,2.864-2.081L14.615,4.928z'/></svg>") !important;
-		padding-top: 21px !important;
-		width: 25px !important;
-		opacity: 1 !important;
-	}
+    .is_thread .board .opContainer .watch-thread-link,
+    .is_index .board .opContainer .watch-thread-link,
+    .dialog .op .postInfo .watch-thread-link {
+        background-image: url("data:image/svg+xml,<svg viewBox='0 0 30 30' preserveAspectRatio='true' xmlns='http://www.w3.org/2000/svg'><path fill='rgb(149,165,166)' d='M14.615,4.928c0.487-0.986,1.284-0.986,1.771,0l2.249,4.554c0.486,0.986,1.775,1.923,2.864,2.081l5.024,0.73c1.089,0.158,1.335,0.916,0.547,1.684l-3.636,3.544c-0.788,0.769-1.28,2.283-1.095,3.368l0.859,5.004c0.186,1.085-0.459,1.553-1.433,1.041l-4.495-2.363c-0.974-0.512-2.567-0.512-3.541,0l-4.495,2.363c-0.974,0.512-1.618,0.044-1.432-1.041l0.858-5.004c0.186-1.085-0.307-2.6-1.094-3.368L3.93,13.977c-0.788-0.768-0.542-1.525,0.547-1.684l5.026-0.73c1.088-0.158,2.377-1.095,2.864-2.081L14.615,4.928z'/></svg>") !important;
+        padding-top: 21px !important;
+        width: 25px !important;
+        opacity: 1 !important;
+    }
 
-	.is_thread .board .opContainer .watched,
-	.is_index .board .opContainer .watched,
-	.dialog .op .postInfo .watched {
-		background-image: url("data:image/svg+xml,<svg viewBox='0 0 30 30' preserveAspectRatio='true' xmlns='http://www.w3.org/2000/svg'><path fill='rgb(242,155,52)' d='M14.615,4.928c0.487-0.986,1.284-0.986,1.771,0l2.249,4.554c0.486,0.986,1.775,1.923,2.864,2.081l5.024,0.73c1.089,0.158,1.335,0.916,0.547,1.684l-3.636,3.544c-0.788,0.769-1.28,2.283-1.095,3.368l0.859,5.004c0.186,1.085-0.459,1.553-1.433,1.041l-4.495-2.363c-0.974-0.512-2.567-0.512-3.541,0l-4.495,2.363c-0.974,0.512-1.618,0.044-1.432-1.041l0.858-5.004c0.186-1.085-0.307-2.6-1.094-3.368L3.93,13.977c-0.788-0.768-0.542-1.525,0.547-1.684l5.026-0.73c1.088-0.158,2.377-1.095,2.864-2.081L14.615,4.928z'/></svg>") !important;
-	}
+    .is_thread .board .opContainer .watched,
+    .is_index .board .opContainer .watched,
+    .dialog .op .postInfo .watched {
+        background-image: url("data:image/svg+xml,<svg viewBox='0 0 30 30' preserveAspectRatio='true' xmlns='http://www.w3.org/2000/svg'><path fill='rgb(242,155,52)' d='M14.615,4.928c0.487-0.986,1.284-0.986,1.771,0l2.249,4.554c0.486,0.986,1.775,1.923,2.864,2.081l5.024,0.73c1.089,0.158,1.335,0.916,0.547,1.684l-3.636,3.544c-0.788,0.769-1.28,2.283-1.095,3.368l0.859,5.004c0.186,1.085-0.459,1.553-1.433,1.041l-4.495-2.363c-0.974-0.512-2.567-0.512-3.541,0l-4.495,2.363c-0.974,0.512-1.618,0.044-1.432-1.041l0.858-5.004c0.186-1.085-0.307-2.6-1.094-3.368L3.93,13.977c-0.788-0.768-0.542-1.525,0.547-1.684l5.026-0.73c1.088-0.158,2.377-1.095,2.864-2.081L14.615,4.928z'/></svg>") !important;
+    }
 
 	:root.recolor-even .thread > .replyContainer:nth-of-type(2n):not(.hidden) .post,:root.recolor-even .thread .post {
 
@@ -1544,7 +1539,7 @@ domain("boards.4channel.org") {
 		background: var(--post-bg) !important;
 		border-color: var(--border) !important;
 		box-shadow: none !important;
-		min-width: 1000px;
+		min-width: 800px;
 	}
 
 	.is_index .reply,
@@ -1663,9 +1658,7 @@ domain("boards.4channel.org") {
 		color: var(--subject-color) !important
 	}
 
-	.nameBlock:not(.capcodeMod) > .name,
-	:root.highlight-opQuotes .qmark-op,
-	.qmark-op {
+	.nameBlock:not(.capcodeMod) > .name,:root.highlight-opQuotes .qmark-op,.qmark-op {
 		color: var(--name-color) !important;
 		font-size: 14pt !important;
 	}
@@ -1720,128 +1713,133 @@ domain("boards.4channel.org") {
 		opacity: .8 !important;
 	}
 
-	.postNum a[href$="00');"]:after, 
-	.postNum a[href$="11');"]:after,
-	.postNum a[href$="22');"]:after, 
-	.postNum a[href$="33');"]:after, 
-	.postNum a[href$="44');"]:after, 
-	.postNum a[href$="55');"]:after, 
-	.postNum a[href$="66');"]:after, 
-	.postNum a[href$="77');"]:after, 
-	.postNum a[href$="88');"]:after, 
-	.postNum a[href$="99');"]:after {
+    .postNum a:hover {
+        color: var(--num-color) !important;
+        opacity: .8 !important;
+    }
 
-		/*** DUBS ***/
-		content: ' ✔' !important;
-		color: #4CAF50 !important;
-		font-weight: bold !important;
-		font-size: 13pt !important;
-		position: relative !important;
-		top: -2px !important;
-	}
+    .postNum a[href$="00');"]:after, 
+    .postNum a[href$="11');"]:after,
+    .postNum a[href$="22');"]:after, 
+    .postNum a[href$="33');"]:after, 
+    .postNum a[href$="44');"]:after, 
+    .postNum a[href$="55');"]:after, 
+    .postNum a[href$="66');"]:after, 
+    .postNum a[href$="77');"]:after, 
+    .postNum a[href$="88');"]:after, 
+    .postNum a[href$="99');"]:after {
 
-	.postNum a[href$="000');"]:after, 
-	.postNum a[href$="111');"]:after, 
-	.postNum a[href$="222');"]:after,
-	.postNum a[href$="333');"]:after, 
-	.postNum a[href$="444');"]:after, 
-	.postNum a[href$="555');"]:after, 
-	.postNum a[href$="666');"]:after,
-	.postNum a[href$="777');"]:after, 
-	.postNum a[href$="888');"]:after, 
-	.postNum a[href$="999');"]:after {
+        /*** DUBS ***/
+        content: ' ✔' !important;
+        color: #4CAF50 !important;
+        font-weight: bold !important;
+        font-size: 13pt !important;
+        position: relative !important;
+        top: -2px !important;
+    }
 
-		/*** TRIPS ***/
-		content: ' ✔✔✔' !important;
-		color: #FF9800 !important;
-	}
+    .postNum a[href$="000');"]:after, 
+    .postNum a[href$="111');"]:after, 
+    .postNum a[href$="222');"]:after,
+    .postNum a[href$="333');"]:after, 
+    .postNum a[href$="444');"]:after, 
+    .postNum a[href$="555');"]:after, 
+    .postNum a[href$="666');"]:after,
+    .postNum a[href$="777');"]:after, 
+    .postNum a[href$="888');"]:after, 
+    .postNum a[href$="999');"]:after {
 
-	.postNum a[href$="0000');"]:after, 
-	.postNum a[href$="1111');"]:after, 
-	.postNum a[href$="2222');"]:after, 
-	.postNum a[href$="3333');"]:after, 
-	.postNum a[href$="4444');"]:after, 
-	.postNum a[href$="5555');"]:after, 
-	.postNum a[href$="6666');"]:after, 
-	.postNum a[href$="7777');"]:after, 
-	.postNum a[href$="8888');"]:after, 
-	.postNum a[href$="9999');"]:after {
+        /*** TRIPS ***/
+        content: ' ✔✔✔' !important;
+        color: #FF9800 !important;
+    }
 
-		/*** QUADS ***/
-		content: ' ✔✔✔✔' !important;
-		color: #F44336 !important;
-	}
+    .postNum a[href$="0000');"]:after, 
+    .postNum a[href$="1111');"]:after, 
+    .postNum a[href$="2222');"]:after, 
+    .postNum a[href$="3333');"]:after, 
+    .postNum a[href$="4444');"]:after, 
+    .postNum a[href$="5555');"]:after, 
+    .postNum a[href$="6666');"]:after, 
+    .postNum a[href$="7777');"]:after, 
+    .postNum a[href$="8888');"]:after, 
+    .postNum a[href$="9999');"]:after {
 
-	.postNum a[href$="00000');"]:after, 
-	.postNum a[href$="11111');"]:after, 
-	.postNum a[href$="22222');"]:after, 
-	.postNum a[href$="33333');"]:after, 
-	.postNum a[href$="44444');"]:after, 
-	.postNum a[href$="55555');"]:after, 
-	.postNum a[href$="66666');"]:after, 
-	.postNum a[href$="77777');"]:after, 
-	.postNum a[href$="88888');"]:after, 
-	.postNum a[href$="99999');"]:after {
-		content: ' ✔✔✔✔✔' !important;
-		color: #E040FB !important;
-	}
+        /*** QUADS ***/
+        content: ' ✔✔✔✔' !important;
+        color: #F44336 !important;
+    }
 
-	.postNum a[href$="000000');"]:after, 
-	.postNum a[href$="111111');"]:after, 
-	.postNum a[href$="222222');"]:after, 
-	.postNum a[href$="333333');"]:after, 
-	.postNum a[href$="444444');"]:after, 
-	.postNum a[href$="555555');"]:after, 
-	.postNum a[href$="666666');"]:after, 
-	.postNum a[href$="777777');"]:after, 
-	.postNum a[href$="888888');"]:after, 
-	.postNum a[href$="999999');"]:after {
-		content: ' ✔✔✔✔✔✔' !important;
-		color: #651FFF !important;
-	}
+    .postNum a[href$="00000');"]:after, 
+    .postNum a[href$="11111');"]:after, 
+    .postNum a[href$="22222');"]:after, 
+    .postNum a[href$="33333');"]:after, 
+    .postNum a[href$="44444');"]:after, 
+    .postNum a[href$="55555');"]:after, 
+    .postNum a[href$="66666');"]:after, 
+    .postNum a[href$="77777');"]:after, 
+    .postNum a[href$="88888');"]:after, 
+    .postNum a[href$="99999');"]:after {
+        content: ' ✔✔✔✔✔' !important;
+        color: #E040FB !important;
+    }
 
-	.postNum a[href$="0000000');"]:after, 
-	.postNum a[href$="1111111');"]:after, 
-	.postNum a[href$="2222222');"]:after, 
-	.postNum a[href$="3333333');"]:after, 
-	.postNum a[href$="4444444');"]:after, 
-	.postNum a[href$="5555555');"]:after,
-	.postNum a[href$="6666666');"]:after, 
-	.postNum a[href$="7777777');"]:after,
-	.postNum a[href$="8888888');"]:after, 
-	.postNum a[href$="9999999');"]:after {
-		content: ' ✔✔✔✔✔✔✔' !important;
-		color: #304FFE !important;
-	}
+    .postNum a[href$="000000');"]:after, 
+    .postNum a[href$="111111');"]:after, 
+    .postNum a[href$="222222');"]:after, 
+    .postNum a[href$="333333');"]:after, 
+    .postNum a[href$="444444');"]:after, 
+    .postNum a[href$="555555');"]:after, 
+    .postNum a[href$="666666');"]:after, 
+    .postNum a[href$="777777');"]:after, 
+    .postNum a[href$="888888');"]:after, 
+    .postNum a[href$="999999');"]:after {
+        content: ' ✔✔✔✔✔✔' !important;
+        color: #651FFF !important;
+    }
 
-	.postNum a[href$="00000000');"]:after, 
-	.postNum a[href$="11111111');"]:after, 
-	.postNum a[href$="22222222');"]:after, 
-	.postNum a[href$="33333333');"]:after, 
-	.postNum a[href$="44444444');"]:after, 
-	.postNum a[href$="55555555');"]:after, 
-	.postNum a[href$="66666666');"]:after, 
-	.postNum a[href$="77777777');"]:after, 
-	.postNum a[href$="88888888');"]:after, 
-	.postNum a[href$="99999999');"]:after {
-		content: ' ✔✔✔✔✔✔✔✔' !important;
-		color: #2196F3 !important;
-	}
+    .postNum a[href$="0000000');"]:after, 
+    .postNum a[href$="1111111');"]:after, 
+    .postNum a[href$="2222222');"]:after, 
+    .postNum a[href$="3333333');"]:after, 
+    .postNum a[href$="4444444');"]:after, 
+    .postNum a[href$="5555555');"]:after,
+    .postNum a[href$="6666666');"]:after, 
+    .postNum a[href$="7777777');"]:after,
+    .postNum a[href$="8888888');"]:after, 
+    .postNum a[href$="9999999');"]:after {
+        content: ' ✔✔✔✔✔✔✔' !important;
+        color: #304FFE !important;
+    }
 
-	.postNum a[href$="000000000');"]:after,
-	.postNum a[href$="111111111');"]:after, 
-	.postNum a[href$="222222222');"]:after, 
-	.postNum a[href$="333333333');"]:after, 
-	.postNum a[href$="444444444');"]:after, 
-	.postNum a[href$="555555555');"]:after, 
-	.postNum a[href$="666666666');"]:after,
-	.postNum a[href$="777777777');"]:after,
-	.postNum a[href$="888888888');"]:after, 
-	.postNum a[href$="999999999');"]:after {
-		content: ' ✔✔✔✔✔✔✔✔✔' !important;
-		color: #000000 !important;
-	}
+    .postNum a[href$="00000000');"]:after, 
+    .postNum a[href$="11111111');"]:after, 
+    .postNum a[href$="22222222');"]:after, 
+    .postNum a[href$="33333333');"]:after, 
+    .postNum a[href$="44444444');"]:after, 
+    .postNum a[href$="55555555');"]:after, 
+    .postNum a[href$="66666666');"]:after, 
+    .postNum a[href$="77777777');"]:after, 
+    .postNum a[href$="88888888');"]:after, 
+    .postNum a[href$="99999999');"]:after {
+        content: ' ✔✔✔✔✔✔✔✔' !important;
+        color: #2196F3 !important;
+    }
 
+    .postNum a[href$="000000000');"]:after,
+    .postNum a[href$="111111111');"]:after, 
+    .postNum a[href$="222222222');"]:after, 
+    .postNum a[href$="333333333');"]:after, 
+    .postNum a[href$="444444444');"]:after, 
+    .postNum a[href$="555555555');"]:after, 
+    .postNum a[href$="666666666');"]:after,
+    .postNum a[href$="777777777');"]:after,
+    .postNum a[href$="888888888');"]:after, 
+    .postNum a[href$="999999999');"]:after {
+        content: ' ✔✔✔✔✔✔✔✔✔' !important;
+        color: #000000 !important;
+    }
+    
 	:root:not(.ua-webkit):not(.ua-blink) .fileText {
 		max-width: 100% !important;
 		overflow: hidden !important;
@@ -1881,10 +1879,10 @@ domain("boards.4channel.org") {
 		bottom: 6px !important;
 	}
 
-	:root.backlink-icon .backlink {
-		background-image: url("data:image/svg+xml,<svg viewBox='0 0 30 30' preserveAspectRatio='true'       xmlns='http://www.w3.org/2000/svg'><path fill='rgb(113,186,81)' d='M12.981,9.073V6.817l-12.106,6.99l12.106,6.99v-2.422c3.285-0.002,9.052,0.28,9.052,2.269c0,2.78-6.023,4.263-6.023,4.263v2.132c0,0,13.53,0.463,13.53-9.823C29.54,9.134,17.952,8.831,12.981,9.073z'/></svg>") !important;
-		padding: 8px !important;
-	}
+    :root.backlink-icon .backlink {
+        background-image: url("data:image/svg+xml,<svg viewBox='0 0 30 30' preserveAspectRatio='true'       xmlns='http://www.w3.org/2000/svg'><path fill='rgb(113,186,81)' d='M12.981,9.073V6.817l-12.106,6.99l12.106,6.99v-2.422c3.285-0.002,9.052,0.28,9.052,2.269c0,2.78-6.023,4.263-6.023,4.263v2.132c0,0,13.53,0.463,13.53-9.823C29.54,9.134,17.952,8.831,12.981,9.073z'/></svg>") !important;
+        padding: 8px !important;
+    }
 
 	:root.reply-fit-width .post .menu-button,
 	:root:not(.reply-fit-width) .post .menu-button {
@@ -1968,19 +1966,19 @@ domain("boards.4channel.org") {
 		margin-left: 0 !important;
 	}
 
-	.is_thread .post .postMessage,
-	.is_thread .post .postMessage a:not(.quotelink),
-	.is_index .post .postMessage,
-	.is_index .post .postMessage a:not(.quotelink),
-	.is_arclist .post .postMessage,
-	.is_arclist .post .postMessage a:not(.quotelink),
-	:root.op-background .postContainer.opContainer .postMessage,
-	:root.op-background .postContainer.opContainer .postMessage a,
-	.is_thread s,
-	.is_index s {
-		font-size: 14pt !important;
-		font-stretch: condensed !important;
-	}
+    .is_thread .post .postMessage,
+    .is_thread .post .postMessage a:not(.quotelink),
+    .is_index .post .postMessage,
+    .is_index .post .postMessage a:not(.quotelink),
+    .is_arclist .post .postMessage,
+    .is_arclist .post .postMessage a:not(.quotelink),
+    :root.op-background .postContainer.opContainer .postMessage,
+    :root.op-background .postContainer.opContainer .postMessage a,
+    .is_thread s,
+    .is_index s {
+        font-size: 14pt !important;
+        font-stretch: condensed !important;
+    }
 
 	.is_thread .quotelink,
 	.is_index .quotelink {
@@ -2052,9 +2050,9 @@ domain("boards.4channel.org") {
 		bottom: -4px !important;
 	}
 
-	#qr .field[name="name"],
-	#qr .field[name="email"],
-	#qr .field[name="sub"] {
+	#qr .field[name=' ✔✔✔✔✔✔'],
+	#qr .field[name=' ✔✔✔✔✔✔✔'],
+	#qr .field[name=' ✔✔✔✔✔✔✔✔'] {
 		background: var(--post-bg) !important;
 		border: 1px solid var(--border) !important;
 		border-radius: 1px !important;
@@ -2102,7 +2100,7 @@ domain("boards.4channel.org") {
 	#qr-file-button,
 	#qr-filename-container,
 	#qr-filename-container:hover,
-	#qr input[value="Submit"] {
+	#qr input[value=' ✔✔✔✔✔✔✔✔✔'] {
 		background: var(--input-bg) !important;
 		border: 1px solid var(--border) !important;
 		border-radius: 2px !important;
