--- a/4chan.user.css
+++ b/4chan.user.css
@@ -26,7 +26,7 @@
 		--catalog-subject-color: #65878F !important;
 		--current-color: #34495E !important;
 		--dead-color: #D33257 !important;
-		--info-color: #BBB !important;
+		--info-color: #7E7E7E !important;
 		--link-color: #008891 !important;
 		--menu-color: #808080 !important;
 		--name-color: #A34443 !important;
