--- a/4chan.user.css
+++ b/4chan.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           Pygmalion
 @namespace      https://github.com/Catgrills/Pygmalion
-@version        1.1.1
+@version        1.1.2
 @description    An user style for 4chan called Pygmalion.
 @author         Catgrills/Katgrills
 @preprocessor uso
@@ -1423,6 +1423,7 @@ domain("boards.4channel.org") {
 		left: 10px;
 		bottom: 10px !important;
 		width: 700px;
+		padding-bottom: 30px;
 		z-index: 9999 !important;
 	}
 
