--- a/4chan.user.css
+++ b/4chan.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           Pygmalion
 @namespace      https://github.com/Catgrills/Pygmalion
-@version        1.1.2
+@version        1.1.3
 @description    An user style for 4chan called Pygmalion.
 @author         Catgrills/Katgrills
 @preprocessor uso
@@ -1924,7 +1924,7 @@ domain("boards.4channel.org") {
 	.is_arclist .board .container,
 	.is_arclist .reply .container,
 	:root.op-background .postContainer.opContainer .container {
-		position: absolute !important;
+		position: relative !important;
 		margin-top: -2px !important;
 	}
 
